--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   },
   "devDependencies": {
     "ava": "^0.22.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "codecov": "^2.3.0",
     "cross-env": "^5.0.5",
     "eslint": "^4.5.0",
@@ -46,22 +44,19 @@
       "git add"
     ]
   },
-  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/koajs/toidentifier"
   },
   "files": [
-    "lib"
+    "index.js"
   ],
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "xo",
     "precommit": "lint-staged && npm test",
-    "test": "npm run build && npm run lint && npm run test-coverage",
-    "test-coverage": "cross-env NODE_ENV=test nyc ava",
-    "build": "node_modules/.bin/babel src --out-dir lib",
-    "watch": "node_modules/.bin/babel src --watch --out-dir lib"
+    "test": "npm run lint && npm run test-coverage",
+    "test-coverage": "cross-env NODE_ENV=test nyc ava"
   },
   "xo": {
     "extends": "prettier",
