--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,12 @@ node_js:
   - '8.4'
 sudo: false
 dist: precise
+cache:
+  directories:
+    - node_modules
+before_install:
+  # Update Node.js modules
+  - "test ! -d node_modules || npm prune"
+  - "test ! -d node_modules || npm rebuild"
 after_success:
   npm run coverage
