--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "xo",
     "precommit": "lint-staged && npm test",
-    "test": "npm run lint && npm run test-coverage",
-    "test-coverage": "cross-env NODE_ENV=test nyc ava"
+    "test": "cross-env NODE_ENV=test nyc ava"
   },
   "xo": {
     "extends": "prettier",
