--- a/package.json
+++ b/package.json
@@ -8,19 +8,14 @@
     "Nick Baugh <niftylettuce@gmail.com> (http://niftylettuce.com/)"
   ],
   "repository": "component/toidentifier",
-  "ava": {
-    "failFast": true,
-    "verbose": true
-  },
   "devDependencies": {
-    "ava": "^0.22.0",
     "codecov": "^2.3.0",
-    "cross-env": "^5.0.5",
     "eslint": "^4.5.0",
     "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-prettier": "^2.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.4",
+    "mocha": "1.21.5",
     "nyc": "^11.1.0",
     "prettier": "^1.6.1",
     "xo": "^0.19.0"
@@ -46,9 +41,11 @@
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "xo",
     "precommit": "lint-staged && npm test",
-    "test": "cross-env NODE_ENV=test nyc ava"
+    "test": "mocha --reporter spec --bail --check-leaks test/",
+    "test-cov": "nyc --reporter=html --reporter=text npm test"
   },
   "xo": {
+    "env": "mocha",
     "extends": "prettier",
     "plugins": [
       "prettier"
