--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "repository": "component/toidentifier",
   "devDependencies": {
     "codecov": "^2.3.0",
-    "eslint": "^4.5.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-prettier": "^2.2.0",
+    "eslint": "4.19.1",
+    "eslint-config-standard": "11.0.0",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-standard": "3.0.1",
     "mocha": "1.21.5",
-    "nyc": "^11.1.0",
-    "prettier": "^1.6.1",
-    "xo": "^0.19.0"
+    "nyc": "^11.1.0"
   },
   "engines": {
     "node": ">=0.6"
@@ -31,40 +32,8 @@
   ],
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "format": "prettier --write --single-quote --trailing-comma none '*.js' '**/*.js'",
-    "lint": "xo",
+    "lint": "eslint .",
     "test": "mocha --reporter spec --bail --check-leaks test/",
     "test-cov": "nyc --reporter=html --reporter=text npm test"
-  },
-  "xo": {
-    "env": "mocha",
-    "extends": "prettier",
-    "plugins": [
-      "prettier"
-    ],
-    "parserOptions": {
-      "sourceType": "script"
-    },
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "singleQuote": true,
-          "bracketSpacing": true,
-          "trailingComma": "none"
-        }
-      ],
-      "max-len": [
-        "error",
-        {
-          "code": 80,
-          "ignoreUrls": true
-        }
-      ],
-      "capitalized-comments": "off",
-      "camelcase": "off",
-      "no-warning-comments": "off"
-    },
-    "space": true
   }
 }
