--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,16 @@ cache:
 before_install:
   # Skip updating shrinkwrap / lock
   - "npm config set shrinkwrap false"
+  # Setup Node.js version-specific dependencies
+  - "test $(echo $TRAVIS_NODE_VERSION | cut -d. -f1) -ge 4 || npm rm --save-dev nyc"
+  - "test $(echo $TRAVIS_NODE_VERSION | cut -d. -f1) -ge 4 || npm rm --save-dev $(grep -E '\"eslint\\S*\"' package.json | cut -d'\"' -f2)"
   # Update Node.js modules
   - "test ! -d node_modules || npm prune"
   - "test ! -d node_modules || npm rebuild"
 script:
-  - "npm run-script lint"
-  - "npm run-script test-cov"
+  # Run test script, depending on nyc install
+  - "test ! -z $(npm -ps ls nyc) || npm test"
+  - "test   -z $(npm -ps ls nyc) || npm run-script test-cov"
+  - "test   -z $(npm -ps ls eslint) || npm run-script lint"
 after_success:
-  npm run coverage
+  - "test ! -z $(npm -ps ls nyc) && npm run coverage"
