--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,22 @@ node_js:
   - '8.11'
   - '9.11'
   - '10.6'
+jobs:
+  exclude:
+    - node-js: 0.6
+      arch: ppc64le
+    - node-js: 0.8
+      arch: ppc64le
+    - node-js: 0.10
+      arch: ppc64le
+    - node-js: 0.12
+      arch: ppc64le
+    - node-js: 1.8
+      arch: ppc64le
+    - node-js: 2.5
+      arch: ppc64le
+    - node-js: 3.3
+      arch: ppc64le
 sudo: false
 dist: precise
 cache:
